--- a/NutshellRepo/Views/Shared/_Layout.cshtml
+++ b/NutshellRepo/Views/Shared/_Layout.cshtml
@@ -26,11 +26,12 @@
                 <div id="userPanel">
 
                     <div id="avatarThumbnail">
-                        <img src="~/Site/images/nut.jpg" alt="user_img" height="42" width="42" id="userThumb">
+                        <img src="~/Site/images/user.jpg" alt="user_img" height="42" width="42" id="userThumb" />
                     </div>
 
                     <div id="userNameStringDiv">
                         <a href="#" id="userNameString" title="Profile">pupsiK</a>
+
                     </div>
 
                     <div id="messagesDiv">
@@ -40,22 +41,19 @@
                 </div>
 
                 <div id="createNutshellDiv">
-                    <img src="~/Site/images/nutCol.svg" alt="nut_img" height="48" width="48" id="nutThumb" title="Login to create a Nutshell/Create a Nutshell">
+                    <img src="~/Site/images/nutButton.svg" alt="nut_img" height="48" width="48" id="nutThumb" title="Login to create a Nutshell/Create a Nutshell">
                 </div>
 
-                <form asp-controller="home" asp-action="nutshell" method="get" class="mr-2" id="searchForm">
-
+                <form asp-controller="home" asp-action="nutshell" method="post" class="mr-2" id="searchForm">                    
                     <div class="input-group">
                         <input class="form-control py-2" type="search" placeholder="Find a Nutshell" id="searchField" pattern=".{2,100}" title="2-100 characters range" name="search">
-                        <div class="input-group-append">
+                        <div class="input-group-append">                            
                             <button class="btn btn-secondary btn-sm" onClick="return empty()" type="submit" id="searchBtn">
                                 <i class="fa fa-search" id="mglass"></i>
                             </button>
                         </div>
                     </div>
-
-                </form>
-
+                </form>                
             </header>
 
         </div>
@@ -146,17 +144,16 @@
             </div>
             <!-- Copyright -->
             <div class="footer-copyright text-center py-3">
-                &copy; 2019 - StudyLogBook - <a class="text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                &copy; 2019 - NutshellRepo<a class="text-dark ml-2" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
 
 
         </footer>
 
-    </div>
-
+    </div>    
     <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="~/lib/twitter-bootstrap/js/bootstrap.bundle.min.js"></script>    
-    <script src="~/Site/js/app.js"></script>
+    <script src="~/lib/twitter-bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/Site/js/site.js"></script>
     @*Add here when needed shared js*@
     @RenderSection("Scripts", required: false)
 
