Moto index Container
made Moto container, started member class

--- a/NutshellRepo/Views/Home/Index.cshtml
+++ b/NutshellRepo/Views/Home/Index.cshtml
@@ -40,6 +40,15 @@
 
 </div>
 
+<div class="container" id="motoDiv">
+    <div id="motoWordsDiv">
+        <div class="motoWords" id="learn">Learn</div>
+        <div class="motoWords" id="concise">Concise</div>
+        <div class="motoWords" id="revise">Revise</div>
+    </div>
+    <div id="siteNameString">NutshellRepo.com</div>
+    <div id="motoFooter"></div>
+</div>
 
 
 @section Scripts
