--- a/NutshellRepo/Views/Shared/_Layout.cshtml
+++ b/NutshellRepo/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <div id="userPanel">
 
                     <div id="avatarThumbnail">
-                        <img src="~/Site/images/user.jpg" alt="user_img" height="42" width="42" id="userThumb" />
+                        <img src="~/Site/images/defaultAvatar.svg" alt="user_img" height="42" width="42" id="userThumb" />
                     </div>
 
                     <div id="userNameStringDiv">
