--- a/NutshellRepo/Views/Home/Index.cshtml
+++ b/NutshellRepo/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
 
 @section Scripts
 {
-    <link href="~/Site/css/Index/Index.css" rel="stylesheet" />
-    <script src="~/Site/js/Index/index.js"></script>
-
+    <link href="~/Site/css/Index.css" rel="stylesheet" />
+    <script src="~/Site/js/index.js"></script>    
 }
+
