--- a/NutshellRepo/Views/Shared/_Layout.cshtml
+++ b/NutshellRepo/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" title="Close">&times;</a>
             <a asp-controller="Home" asp-action="Index">Home</a>
             <a href="#" id="loginA" onclick="openLoginDiv()">Login</a>
-            <a asp-controller="users" asp-action="register">Register</a>
+            <a asp-controller="account" asp-action="register">Register</a>
             <a href="#">Contacts</a>
             <a href="#">About</a>
 
