--- a/NutshellRepo/wwwroot/Site/css/LayoutStyle.css
+++ b/NutshellRepo/wwwroot/Site/css/LayoutStyle.css
@@ -314,3 +314,21 @@
 TextTab {
     margin-left:30px;
 }
+
+
+
+
+.btns {
+    clip-path: polygon(20% 0, 100% 0, 100% 20%, 80% 100%, 0 100%, 0 80%);
+    border-radius: 0;
+    font-style: italic;
+    letter-spacing: 1px;
+    width: 100px;
+    margin-bottom: 5px;
+}
+
+    .btns:focus {
+        border: none;
+        box-shadow: 0 0 5px rgb(255, 153, 0);
+    }
+
