Send Email Functionality, Send/Receive Confirmation Link
register functionality with viewpages, also templated email for confirmation, Confirm Email Action in Account Controller

--- a/NutshellRepo/wwwroot/Site/css/Register.css
+++ b/NutshellRepo/wwwroot/Site/css/Register.css
@@ -66,3 +66,18 @@
     
 }
 
+/*============email confirmation page======*/
+.confirmationText{
+    text-align:center;
+}
+
+.homePageBtn {
+    width: 200px;
+}
+
+#thankEmailDiv {
+    background-color: rgb(40,40,50);
+    background-image: url("/Site/images/logoTransparentHappySmile.svg");
+    background-position: left;
+    background-repeat: no-repeat;
+}
