--- a/NutshellRepo/Views/Account/Register.cshtml
+++ b/NutshellRepo/Views/Account/Register.cshtml
@@ -8,21 +8,20 @@
 <div class="flex-container">
 
     <div id="registrationText">
-        <br/>
+        <br />
         <h2>Register New Account</h2>
-        <br/>
+        <br />
         Sign Up to Become a Member and start submiting your idea in a Nutshell!
-        Please be concise and write straight to the point.<br/>You Make this resource beloved by the day!
-        <br/>
-
-        <div class="pt-3">                
+        Please be concise and write straight to the point.<br /><br/>
+        <div class="text-center">You Make this resource beloved by the day!</div>
+        <div class="pt-3 text-center">
             <button class="btn btn-info btns">Rules</button>
             <button class="btn btn-info btns">Guides</button>
         </div>
     </div>
 
 
-    <form asp-controller="account" asp-action="register" id="registerDiv">       
+    <form asp-controller="account" asp-action="register" id="registerDiv">
 
         <div class="form-group myInputGroup">
             <label asp-for="UserName" class="control-label "></label>
