--- a/NutshellRepo/Views/Account/ConfirmEmail.cshtml
+++ b/NutshellRepo/Views/Account/ConfirmEmail.cshtml
@@ -9,9 +9,9 @@
         <h3>Thank you for confirming your email!</h3>
         <br />
         <br /><br />
-        You Make this resource beloved by the day!
-        <br /><br />
-        <a asp-controller="home" asp-action="index" class="btn btn-info btns homePageBtn">Home Page</a>
+        <div class="text-center">You Make this resource beloved by the day!</div>
+        <br />
+        <a asp-controller="home" asp-action="index" class="btn btn-info btns homePageBtn" id="homeBtn">Home Page</a>
     </div>
 
 </div>
@@ -19,5 +19,11 @@
 @section Scripts
 {
     <link href="~/Site/css/Register.css" rel="stylesheet" />
-
+    <script type="text/javascript">
+        $(document).ready(function () {
+            setTimeout(function () {
+                document.getElementById("homeBtn").click();
+            }, 5000);
+        });
+    </script>
 }
