--- a/NutshellRepo/Views/Account/ConfirmationSent.cshtml
+++ b/NutshellRepo/Views/Account/ConfirmationSent.cshtml
@@ -12,16 +12,23 @@
 
         <br />
         In some cases it may take several minutes before a message reaches the destination. Also check your spam folder.
-        <br/>
-        <br />You Make this resource beloved by the day!
         <br /><br/>
-        <a asp-controller="home" asp-action="index" class="btn btn-info btns homePageBtn">Home Page</a>
+        <div class="text-center">You Make this resource beloved by the day!</div>
+        <br />
+        <a asp-controller="home" asp-action="index" class="btn btn-info btns homePageBtn" id="homeBtn">Home Page</a>
     </div>
 
 </div>
 
 @section Scripts
-{    
+{
     <link href="~/Site/css/Register.css" rel="stylesheet" />
+    <script type="text/javascript">
+        $(document).ready(function () {
+            setTimeout(function () {
+                document.getElementById("homeBtn").click();
+            }, 20000);
+        });
+    </script>
 
 }
