--- a/NutshellRepo/wwwroot/Site/css/Register.css
+++ b/NutshellRepo/wwwroot/Site/css/Register.css
@@ -81,3 +81,107 @@
     background-position: left;
     background-repeat: no-repeat;
 }
+
+/*======login======*/
+
+#loginDiv {
+    margin: 10px auto;
+    max-width: 400px;
+    background-color: rgb(40,40,50);
+    background-image: url("/Site/images/logoTransparent.svg");
+    background-position: top;
+    background-repeat: no-repeat;
+    color: whitesmoke;
+    box-shadow: 0 0 3px whitesmoke;
+    height: 100%;
+    padding-top: 10px;
+}
+
+
+
+#checkBoxDiv {
+    height: 38px;
+    position: relative;
+    margin: 20px auto 10px auto;
+    border-bottom: 2px solid rgb(80,80,80);
+    border-radius:4px;
+    padding: 0 5px 0 5px;
+}
+
+#checkLbl {
+    margin-top:5px;
+}
+
+#checkbox {
+    cursor:pointer;
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 25px;    
+    -webkit-appearance: none;
+    outline: none;
+    background-color: rgb(80,80,80);
+    border-radius: 3px;
+    transition: background-color 400ms ease-out;
+    box-shadow: inset 0 0 3px black;
+    border: 2px solid rgb(80,80,80);
+}
+
+    #checkbox:checked {
+        background-color: #847265;
+    }
+
+#checkbox::before {
+    text-align: right;
+    text-shadow: 0 0 2px black,0 0 2px black;
+    padding-right: 2px;
+    content: '.';
+    color:black;
+    line-height: 2px;
+    position: absolute;
+    width: 24px;
+    height: 15px;
+    top: 2.5px;
+    left: 2px;
+    border-radius: 3px;
+    border: 2px solid rgb(40,40,50);
+    background-color: rgb(40, 80, 160);
+    box-shadow: inset 0 0 3px rgba(0,0,0,0.8);
+    transition: 200ms ease-out;
+}
+
+    #checkbox:checked::before {
+        color: wheat;
+        background-color: rgb(20,130,255);        
+        left:30px;
+    }
+
+
+#rememberMe {    
+    display: inline;
+    position: relative;
+    top: -6px;
+    margin-left:60px;
+    cursor:pointer;
+    text-decoration:none;
+    border-bottom: 1px dashed darkgrey;
+}
+
+
+
+#logInBtn {
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    letter-spacing: 1px;
+    width: 100%;
+    border-radius: 0;
+    padding: 10px 0px;
+}
+
+    #logInBtn:active {
+        box-shadow: none;
+    }
+
